tests/invalid/comment_only_partial_indent.nano
  # partial indentation is invalid even when the document contains no data
